Fix color contrast accesibilty to buyers-sellers

--- a/scss/core/helpers/resources/buyers-sellers-rentals.scss
+++ b/scss/core/helpers/resources/buyers-sellers-rentals.scss
@@ -23,6 +23,7 @@ $colorp: #FFF;
 
 // ESTILOS GENERALES DE LOS FORMS
 	.ib-form-buyandsell {
+		background-color: #333;
 		@include flexpa();
 		position: relative;
 		min-height: calc(100vh - 169px);
